// Vitest Snapshot v1

exports[`Button fires the onClick event when clicked 1`] = `
<button
  className="sc-bczRLJ bBRcZQ"
  disabled={false}
  onClick={[Function]}
  title="test"
  type="button"
>
  <div
    className="sc-gsnTZi PBjap"
  >
    <span>
      Test button
    </span>
  </div>
</button>
`;

exports[`Button fires the onClick event when clicked 2`] = `
<button
  className="sc-bczRLJ bBRcZQ"
  disabled={false}
  onClick={[Function]}
  title="test"
  type="button"
>
  <div
    className="sc-gsnTZi PBjap"
  >
    <span>
      Test button
    </span>
  </div>
</button>
`;

exports[`Button renders with text if label is provided 1`] = `
<button
  className="sc-bczRLJ bBRcZQ"
  disabled={false}
  title="test"
  type="button"
>
  <div
    className="sc-gsnTZi PBjap"
  >
    <span>
      Test button
    </span>
  </div>
</button>
`;
